@@ -3,6 +3,9 @@ OpenSCAD 2010.03
 ================
 
  .. ADD STUFF HERE ..
+ o Added functions and statements
+  - Added exp(x), log(b, x), log(x) and ln(x) functions
+  - Added minkowski() statement for 3d minkowski sums
  o Some bugs fixed, maybe some new bugs added
 
 OpenSCAD 2010.02
